# math-expression-evaluators

./: LICENSE
CRpnSolver/: .gitignore  CMakeLists.txt  buildandrun.bat
CRpnSolver/include/collections/: stringbuilder.h  tokenlist.h
CRpnSolver/include/solver/: rpnconverter.h  rpnsolver.h  tokenizer.h
CRpnSolver/src/: main.c
CRpnSolver/src/collections/: stringbuilder.c  tokenslist.c
CRpnSolver/src/solver/: rpnconverter.c  rpnsolver.c  tokenizer.c
CSharpRPNSolver/: ExpressionParser.sln
CSharpRPNSolver/ExpressionParser/: Program.cs
CppRpnSolver/: .gitignore  CppRpnSolver.sln
CppRpnSolver/CppRpnSolver/: Associativity.hpp  CppRpnSolver.cpp  CppRpnSolver.vcxproj  CppRpnSolver.vcxproj.filters  InfixToRpnConverter.cpp  InfixToRpnConverter.hpp  InvalidToken.cpp  InvalidToken.hpp  LiteralToken.cpp  LiteralToken.hpp  Operator.hpp  OperatorToken.cpp  OperatorToken.hpp  RpnEvaluatorVisitor.cpp  RpnEvaluatorVisitor.hpp  Token.hpp  TokenVisitor.hpp  TokenizerFsm.cpp  TokenizerFsm.hpp
dartRpnSolver/: main.dart
dartRpnSolver/exceptions/: AggregateException.dart
dartRpnSolver/parse/: Parser.dart  Tokenizer.dart
dartRpnSolver/token/: InvalidToken.dart  LiteralToken.dart  OperatorToken.dart  Token.dart
go-rpn-solver/: go.mod  main.go
go-rpn-solver/collections/: stack.go
go-rpn-solver/sliceutils/: sliceExtensions.go
go-rpn-solver/solver/: shuntingYardParser.go  token.go  tokenizer.go
kotlinRpnSolver/src/: Main.kt
python_rpn_solver/: main.py
ts-rpn-solver/: package-lock.json  package.json
ts-rpn-solver/src/: Main.ts
ts-rpn-solver/src/token/: Token.ts
(+28 files in other folders)
